Fixed layout issue on small screens

--- a/docs/_sass/jekyll-theme-leap-day.scss
+++ b/docs/_sass/jekyll-theme-leap-day.scss
@@ -88,7 +88,7 @@ blockquote {
 }
 
 code {
-  font-family: 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+  font-family: 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
   font-size:13px;
   color:#efefef;
   text-shadow: 0px 1px 0px #000;
@@ -267,7 +267,7 @@ header {
     right:7px;
     top:7px;
     display: block;
-    background: url(../images/octocat-logo.png);
+    // background: url(../images/octocat-logo.png);
   }
 }
 
